# ROS_xunfei

./: README.md
.Trash-1000/files/omnidir/: global_planner_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
.Trash-1000/info/: omni_ucar_nav.launch.trashinfo  omnidir.trashinfo
ucar_ws/.Trash-1000/info/: .2.git.trashinfo  .git.trashinfo  Huanyu_smoother.yaml.trashinfo  ROS_xunfei_ucar.trashinfo  models.avi.trashinfo  src(复件).trashinfo  src.trashinfo  ucar_ros.trashinfo
ucar_ws/src/auto_nav2d_point/: CMakeLists.txt  package.xml
ucar_ws/src/auto_nav2d_point/data/: 1.json  2.json  3.json  4.json
ucar_ws/src/auto_nav2d_point/src/: record_location.py
ucar_ws/src/depeth/: CMakeLists.txt
ucar_ws/src/depeth/src/: depeth.cpp  depeth.py  ht_depeth.cpp
ucar_ws/src/game_start/scripts/: 1.py  2.py  3.py  all_in_one.py  smach.py  xunfei_aruco_1.py  xunfei_publish_detect.py
ucar_ws/src/ht_code/: ht_aruco.py  ht_aruco_sub.py  ht_usb_camera.py
ucar_ws/src/ht_cv_bridge/src/: ht_aruco_sub3.py  ht_usb_camera.py  ht_usb_camera_BRIGHTNESS.py  ht_usb_camera_CONTRAST.py  ht_usb_camera_EXPOSURE.py  ht_usb_camera_HUE.py  ht_usb_camera_SATURATION.py  ht_usb_camera_canshu.py  ht_usb_camera_capture.py  xunfei_aruco_sub.py  xunfei_camera_1.py
ucar_ws/src/ht_image/scripts/: xunfei.py  xunfei2.0.py  xunfei4.0.py  xunfei5.0.py
ucar_ws/src/ht_image/src/: receive.py
ucar_ws/src/ht_msg/: CMakeLists.txt  package.xml
ucar_ws/src/ht_msg/msg/: Ht.msg
ucar_ws/src/ht_yolov5_1/scripts/: detect.py
ucar_ws/src/huanyu_joy/launch/: huanyu_ps2_control.launch
ucar_ws/src/huanyu_joy/src/: huanyu_joy.cpp
ucar_ws/src/ucar_cam/scripts/: ht_camera.py  usb_camera.py
ucar_ws/src/ucar_controller/config/: driver_params_mini.yaml
ucar_ws/src/ucar_controller/launch/: base_driver.launch
ucar_ws/src/ucar_controller/log_info/: car_Mileage_info.txt  car_Mileage_info.txt.bp
ucar_ws/src/ucar_controller/src/: base_driver.cpp
ucar_ws/src/ucar_nav/: nav_rviz.rviz
ucar_ws/src/ucar_nav/launch/: navigation_test.launch  omni_ucar_nav.launch  ucar_navigation.launch
ucar_ws/src/ucar_nav/maps/: mymap.pgm  mymap.yaml
ucar_ws/src/xf_mic_asr_offline/: CMakeLists.txt
(+27 files in other folders)
